--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+    
   },
+  "homepage": "https://jeonga214.github.io/person_pet/",
   "eslintConfig": {
     "extends": [
       "react-app",
