--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.17.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
+    "react-kakao-maps-sdk": "^1.1.21",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "sass": "^1.66.1",
     "styled-reset": "^4.5.1",
