--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-datepicker": "^4.17.0",
     "react-dom": "^18.2.0",
     "react-kakao-maps-sdk": "^1.1.21",
+    "react-modal": "^3.16.1",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "sass": "^1.66.1",
@@ -34,7 +36,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://jeonga214.github.io/person_pet/",
+  "homepage": "/person_pet",
   "eslintConfig": {
     "extends": [
       "react-app",
